--- a/index.html
+++ b/index.html
@@ -33,44 +33,45 @@
                 <div class="info-box">
 
                 </div>
-                <p>subtext 1</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info">
                 <div class="info-box">
 
                 </div>
-                <p>subtext 2</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info">
                 <div class="info-box">
 
                 </div>
-                <p>subtext 3</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info">
                 <div class="info-box">
 
                 </div>
-                <p>subtext 4</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
     <div class="quote">
         <div class="quote-box">
             <div class="quote-text">
-                <p>quote quote quote quote quote quote quote quote</p>
+                <p>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </p>
             </div>
             <div class="quote-attribution">
-                <h3>Thor, God of Thunder</h3>
+                <h6>-Thor, God of Thunder</h6>
             </div>
         </div>
     </div>
     <div class="cta">
         <div class="cta-box">
             <div class="cta-text">
-
+                <h4>Call to action! It's time!</h4>
+                <p>Sign up for our product by clicking that button over there!</p>
             </div>
-            <button>Sign Up</button>
+            <button class="signup">Sign Up</button>
         </div>
     </div>
     <div class="footer">
